docs: swagger hotels
